ActivityService database setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,28 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ActivityserviceApplication",
+            "request": "launch",
+            "mainClass": "com.fitness.activityservice.ActivityserviceApplication",
+            "projectName": ""
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-UserserviceApplication<userservice>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "mainClass": "com.fitness.userservice.UserserviceApplication",
             "projectName": "userservice",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-ActivityserviceApplication<activityservice>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.fitness.activityservice.ActivityserviceApplication",
+            "projectName": "activityservice",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
