--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -9,4 +9,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    
+
+  instance:
+    hostname: thurunu-ym
+    nonSecurePort: ${server.port}
+    preferIpAddress: false
