--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -9,8 +9,23 @@ spring:
         mongodb:
             uri: mongodb://localhost:27017/Fitness_Activity
             database: Fitness_Activity
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest    
+
+rabbitmq:
+  exchange:
+    name: fitness.exchange
+  queue:
+    name: activity.queue
+  routing:
+    key : activity.tracking                
             
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/    
+
