--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -29,3 +29,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/    
 
+gemini:
+  api:
+    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key="
+    key: "AIzaSyDMHSE5brng0km6EG937xNr1Zi1eTBFS6c"
