--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -4,32 +4,5 @@ server:
 spring:
   application:
     name: ai-service
-
-  data:
-        mongodb:
-            uri: mongodb://localhost:27017/Fitness_Activity
-            database: Fitness_Activity
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest    
-
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: activity.queue
-  routing:
-    key : activity.tracking                
-            
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/    
-
-gemini:
-  api:
-    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key="
-    key: "AIzaSyDMHSE5brng0km6EG937xNr1Zi1eTBFS6c"
+  config:
+    import: optional:configserver:http://localhost:8888
